feat: implement v0.2–v0.5 roadmap (query engine, storage, SQL surface, ecosystem)
v0.2 Query Engine:
- Expression AST with full precedence parsing and evaluator
- General WHERE clauses, UPDATE, DELETE with temporal semantics
- JOIN (inner/left/right/cross), aggregates (SUM/AVG/MIN/MAX)
- GROUP BY on arbitrary expressions, HAVING clause

v0.3 Storage & Performance:
- Multi-level compaction (L0→L1→...→L7) with size-budgeted leveling
- LRU block and index caching with configurable memory budgets
- Prefix-compressed SSTable blocks (V2 format) with restart points
- Write-batch API for atomic multi-key bulk ingest
- SIMD feature flag for accelerated bloom probes and checksums

v0.4 SQL Surface & Developer Experience:
- Subqueries, CTEs (WITH ... AS), window functions (ROW_NUMBER, RANK, DENSE_RANK, LEAD, LAG)
- Typed column schema (INTEGER, REAL, TEXT, BOOLEAN, BLOB) with columnar encoding
- Index-backed query execution, COPY import/export
- Python bindings (PyO3) and Node.js bindings (napi-rs)

v0.5 Ecosystem:
- Full-text search facet (inverted index, tokenizer, stemmer)
- Time-series facet (bucketed storage, downsampling, range queries)
- Streaming change feeds with prefix-filtered subscriptions
- io_uring async I/O for WAL writes and SSTable reads
- Comparative benchmark harness

111 tests passing across all workspace crates.

--- a/crates/spectradb-core/Cargo.toml
+++ b/crates/spectradb-core/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [features]
 default = []
 native = ["dep:spectradb-native"]
+simd = []
+io-uring = ["dep:io-uring"]
 
 [dependencies]
 thiserror = "1"
@@ -19,6 +21,7 @@ fastrand = "2"
 tracing = "0.1"
 
 spectradb-native = { path = "../spectradb-native", optional = true }
+io-uring = { version = "0.7", optional = true }
 
 [dev-dependencies]
 tempfile = "3"
