--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ members = [
   "crates/spectradb-core",
   "crates/spectradb-native",
   "crates/spectradb-cli",
+  "crates/spectradb-python",
+  "crates/spectradb-node",
 ]
 default-members = [
   ".",
@@ -25,6 +27,8 @@ resolver = "2"
 [features]
 default = []
 native = ["spectradb-core/native"]
+simd = ["spectradb-core/simd"]
+io-uring = ["spectradb-core/io-uring"]
 
 [dependencies]
 spectradb-core = { path = "crates/spectradb-core" }
@@ -32,7 +36,12 @@ spectradb-core = { path = "crates/spectradb-core" }
 [dev-dependencies]
 criterion = "0.5"
 tempfile = "3"
+serde_json = "1"
 
 [[bench]]
 name = "basic"
+harness = false
+
+[[bench]]
+name = "comparative"
 harness = false
