feat(v0.9): LZ4 block compression + comparative benchmarks vs SQLite
Storage Performance:
- SSTable V2 format with LZ4 block compression (lz4_flex)
- ~40% smaller SSTable files for typical JSON workloads
- Backward-compatible reader: supports both V1 (raw) and V2 (LZ4) SSTables
- Block cache stores decompressed data for zero-overhead repeat reads

Benchmarks:
- Added rusqlite as dev-dependency for SQLite comparison
- Comparative benchmark: point write, point read, prefix scan, mixed workload
- SpectraDB vs SQLite (WAL mode, PRAGMA synchronous=NORMAL)
- Point write: 237µs (SpectraDB) vs 38µs (SQLite)
- Point read: 74µs (SpectraDB) vs 1µs (SQLite)
- Mixed 80/20: 183µs (SpectraDB) vs 9µs (SQLite)

SpectraDB trades raw single-thread speed for:
- Built-in MVCC snapshot reads (AS OF)
- Bitemporal filtering (VALID AT)
- Append-only audit trail (no data loss)
- AI-native insight synthesis
- Sharded concurrent write scaling

All 130 tests passing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ spectradb-core = { path = "crates/spectradb-core" }
 criterion = "0.5"
 tempfile = "3"
 serde_json = "1"
+rusqlite = { version = "0.32", features = ["bundled"] }
 
 [[bench]]
 name = "basic"
