--- a/crates/spectradb-core/Cargo.toml
+++ b/crates/spectradb-core/Cargo.toml
@@ -19,6 +19,7 @@ crossbeam-channel = "0.5"
 parking_lot = "0.12"
 fastrand = "2"
 tracing = "0.1"
+lz4_flex = "0.11"
 
 spectradb-native = { path = "../spectradb-native", optional = true }
 io-uring = { version = "0.7", optional = true }
