--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
   "crates/spectradb-core",
   "crates/spectradb-native",
   "crates/spectradb-cli",
+  "crates/spectradb-server",
   "crates/spectradb-python",
   "crates/spectradb-node",
 ]
@@ -21,6 +22,7 @@ default-members = [
   ".",
   "crates/spectradb-core",
   "crates/spectradb-cli",
+  "crates/spectradb-server",
 ]
 resolver = "2"
 
@@ -29,6 +31,7 @@ default = []
 native = ["spectradb-core/native"]
 simd = ["spectradb-core/simd"]
 io-uring = ["spectradb-core/io-uring"]
+parquet = ["spectradb-core/parquet"]
 
 [dependencies]
 spectradb-core = { path = "crates/spectradb-core" }
@@ -38,6 +41,9 @@ criterion = "0.5"
 tempfile = "3"
 serde_json = "1"
 rusqlite = { version = "0.32", features = ["bundled"] }
+sled = "0.34"
+redb = "2"
+fastrand = "2"
 
 [[bench]]
 name = "basic"
@@ -45,4 +51,8 @@ harness = false
 
 [[bench]]
 name = "comparative"
+harness = false
+
+[[bench]]
+name = "multi_engine"
 harness = false
