--- a/crates/spectradb-core/Cargo.toml
+++ b/crates/spectradb-core/Cargo.toml
@@ -8,6 +8,7 @@ default = []
 native = ["dep:spectradb-native"]
 simd = []
 io-uring = ["dep:io-uring"]
+parquet = ["dep:parquet", "dep:arrow"]
 
 [dependencies]
 thiserror = "1"
@@ -23,6 +24,8 @@ lz4_flex = "0.11"
 
 spectradb-native = { path = "../spectradb-native", optional = true }
 io-uring = { version = "0.7", optional = true }
+parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
+arrow = { version = "54", optional = true, default-features = false, features = ["json"] }
 
 [dev-dependencies]
 tempfile = "3"
