docs: interactive documentation site with Starlight
Adds a full interactive documentation site built with Astro Starlight:

- 58 content pages covering SQL, storage, engine, AI, features, clustering,
  security, integrations, and performance tuning
- 8 custom interactive components: architecture diagram, SQL playground,
  performance chart, config explorer, bitemporal timeline, code tabs,
  feature cards, and landing hero
- Custom theme with glassmorphism, animated gradients, and dark-first design
- Pagefind instant search across all documentation
- Responsive layout with mobile support

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@
 # Tool config
 .claude/
 
+# Docs site build artifacts
+docs/node_modules/
+docs/dist/
+docs/.astro/
+
 # Editor / OS noise
 .DS_Store
 .idea/
