docs: fix inaccurate stats and add crate metadata for public release
- README: correct line count (67k+), crate count (7), core size (~31k)
- CONTRIBUTING: fix default workspace members (root, core, cli, server)
- spectradb-core Cargo.toml: add description, license, repository, keywords
- spectradb-cli Cargo.toml: add description, license, repository

--- a/crates/spectradb-core/Cargo.toml
+++ b/crates/spectradb-core/Cargo.toml
@@ -2,6 +2,11 @@
 name = "spectradb-core"
 version = "0.1.0"
 edition = "2021"
+description = "Core engine for SpectraDB — an AI-native, bitemporal ledger database with MVCC, full SQL, and LSM storage"
+license = "MIT"
+repository = "https://github.com/spectra-db/SpectraDB"
+keywords = ["database", "embedded", "bitemporal", "sql", "lsm"]
+categories = ["database-implementations"]
 
 [features]
 default = []
