--- a/crates/spectradb-cli/Cargo.toml
+++ b/crates/spectradb-cli/Cargo.toml
@@ -2,6 +2,9 @@
 name = "spectradb-cli"
 version = "0.1.0"
 edition = "2021"
+description = "Interactive CLI shell for SpectraDB with TAB completion, output modes, and AI features"
+license = "MIT"
+repository = "https://github.com/spectra-db/SpectraDB"
 
 [features]
 default = []
