license: switch from MIT to BSL 1.1 — non-commercial use only
Commercial use requires a paid license. Converts to Apache 2.0 on 2030-02-27.
Personal, educational, research, and non-commercial use remains free.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "spectradb"
 version = "0.1.0"
 edition = "2021"
 description = "Single-node, append-only, bitemporal ledger database with MVCC snapshot reads and SQL facet"
-license = "MIT"
+license = "BSL-1.1"
 repository = "https://github.com/spectra-db/spectraDB"
 keywords = ["database", "bitemporal", "mvcc", "embedded", "ledger"]
 categories = ["database-implementations"]
