--- a/crates/spectradb-core/Cargo.toml
+++ b/crates/spectradb-core/Cargo.toml
@@ -3,7 +3,7 @@ name = "spectradb-core"
 version = "0.1.0"
 edition = "2021"
 description = "Core engine for SpectraDB — an AI-native, bitemporal ledger database with MVCC, full SQL, and LSM storage"
-license = "MIT"
+license = "BSL-1.1"
 repository = "https://github.com/spectra-db/SpectraDB"
 keywords = ["database", "embedded", "bitemporal", "sql", "lsm"]
 categories = ["database-implementations"]
